# 2122_MultiDroneIndoorSLAM

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  README.md  docker-compose-image.yaml  docker-compose.yaml  entrypoint.sh  startup.bash
Communication/: dag.py  map.py  net.py  utils.py
Communication/src/: dag.py  map.py
Communication/tests/: test_dag.py  test_utils.py
MapMerging/: Dockerfile  README.md  constants.py  experiments.py  hough_merge.py  hough_sift_mapmerge.py  merge_utils.py  requirements.txt  ros_utils.py  transfer.py
argos_bridge/src/plugins/controllers/differential_drive/: CMakeLists.txt
argos_bridge/src/plugins/loop_functions/clock_loop_functions/: CMakeLists.txt  clock_loop_function.h  id_qtuser_functions.cpp  id_qtuser_functions.h
coms/: Makefile  README.md
frontier_rl/: README.txt
mdis_state_machine/: CMakeLists.txt  StateMachineReadMe.md  package.xml  setup.cfg  setup.py
mdis_state_machine/include/: move_base_interface.h  robot_state_machine.h  team_scheduler.h
mdis_state_machine/launch/: test_argos.launch  test_meeting.launch  test_merge.launch  test_merge_SLAM.launch  test_state_machine.launch  test_state_machine_explorer.launch  test_state_machine_relay.launch
mdis_state_machine/msg/: Connection.msg  ConnectionRequest.msg  DataCommunication.msg  Interest.msg  Location.msg  LocationAck.msg  RobotsState.msg
mdis_state_machine/src/: connection_check.cpp  frontier_explore.cpp  move_base_interface.cpp  move_base_test.cpp  robot_state_machine.cpp  team_scheduler.cpp  todo.md
mdis_state_machine/src/mdis_state_machine/: __init__.py  utils.py
mdis_state_machine/tests/: test_state_shift_explorer.py  test_state_shift_relay.py  test_state_shift_team.py
multi_map_ros/: CMakeLists.txt  package.xml
multi_map_ros/launch/: launchscript.temp  map_manager.launch
multi_map_ros/msg/: dag_node.msg
multi_map_ros/rviz/: multi_robot.rviz
multi_map_ros/scripts/: multi_map_node.py
multi_map_ros/src/Communication/: requirements.txt  setup.cfg
multi_map_ros/src/Communication/src/: net.py
multi_map_ros/src/Communication/tests/: test_utils.py
multi_map_ros/src/MapMerging/: setup.cfg
multi_map_ros/src/MapMerging/src/: __init__.py  constants.py  merge_utils.py
multi_map_ros/src/MapMerging/stale_coms/Robots/: merkle_dag.py
multi_map_ros/src/multi_map_ros/Communication/: communication.toml  requirements.txt  setup.cfg  setup.py
multi_map_ros/src/multi_map_ros/Communication/src/: __init__.py  dag.py  map.py
multi_map_ros/src/multi_map_ros/Communication/src/coms/: __init__.py  dag.py  map.py  net.py  utils.py
multi_map_ros/src/multi_map_ros/Communication/tests/: test_dag.py  test_utils.py
multi_map_ros/src/multi_map_ros/Evaluation/Exploration/src/: exploration_eval.py
multi_map_ros/src/multi_map_ros/FrontierSelection/launch/: start_fringe.launch
multi_map_ros/src/multi_map_ros/FrontierSelection/scripts/: alg_testing.py  cluster_sorting_testing.py
multi_map_ros/src/multi_map_ros/FrontierSelection/src/: frontier_clustering.py  move_base_pub.py  move_base_reset.py  publish_inputs_for_learning.py  resize_map.py
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_examples_projects/a3c_turtlebot3/: CMakeLists.txt  package.xml
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_examples_projects/a3c_turtlebot3/config/: a2c_params.yaml
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_examples_projects/a3c_turtlebot3/launch/: start_a2c_training.launch  start_fringe.launch  start_input_publish.launch
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_examples_projects/a3c_turtlebot3/scripts/: a2c.py  a2s_trained.py  testimports.py
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_examples_projects/a3c_turtlebot3/training_actor/: actor_cp.ckpt.index
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_examples_projects/a3c_turtlebot3/training_critic/: critic_cp.ckpt.index
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_ros/openai_ros/: CMakeLists.txt
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_ros/openai_ros/src/openai_ros/robot_envs/: turtlebot3_env_custom_a2c.py
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3_custom_a2c/: turtlebot3_world.py
multi_map_ros/src/multi_map_ros/FrontierSelection/src/openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3_custom_a2c/config/: turtlebot3_world.yaml
multi_map_ros/src/multi_map_ros/MapMerging/: MANIFEST.in  README.md  bak.py  mapmerging.toml  requirements.txt  setup.cfg  setup.py
multi_map_ros/src/multi_map_ros/MapMerging/src/: experiments.py  hough_merge.py  keypoint_merge.py
multi_map_ros/src/multi_map_ros/MapMerging/src/mapmerge/: constants.py  experiments.py  hough_merge.py  keypoint_merge.py  merge_utils.py  real_exp.py  ros_utils.py  simulated_merge.py  world_to_grid.py
multi_map_ros/src/multi_map_ros/MapMerging/src/mapmerge/Data/: map_save.py
multi_map_ros/src/multi_map_ros/MapMerging/src/mapmerge/Data/Gazebo/: robot0_map0.pgm  robot0_map0.yaml  robot0_map1.pgm  robot0_map1.yaml  robot0_map10.pgm  robot0_map10.yaml  robot0_map100.pgm  robot0_map100.yaml  robot0_map101.pgm  robot0_map101.yaml  robot0_map102.pgm  robot0_map102.yaml  robot0_map103.pgm  robot0_map103.yaml  robot0_map104.pgm  robot0_map104.yaml  robot0_map105.pgm  robot0_map105.yaml  robot0_map106.pgm  robot0_map106.yaml  robot0_map107.pgm  robot0_map107.yaml  robot0_map108.pgm  robot0_map108.yaml  robot0_map109.pgm  robot0_map109.yaml  robot0_map11.pgm  robot0_map11.yaml  robot0_map110.pgm  robot0_map110.yaml  robot0_map111.pgm  robot0_map111.yaml  robot0_map112.pgm  robot0_map112.yaml  robot0_map113.pgm  robot0_map113.yaml  robot0_map114.pgm  robot0_map114.yaml  robot0_map115.pgm  robot0_map115.yaml  (+1381 more)
multi_map_ros/src/multi_map_ros/MapMerging/stale_coms/: dag.py  map.py  quadtree_map.py  strategy.py  transfer.py
multi_map_ros/src/multi_map_ros/MapMerging/stale_coms/Robots/: full.py
multi_map_ros/srv/: merge_srv.srv
(+171 files in other folders)
