[metadata]
name = mdis_state_machine
version = 0.0.1
author = 'Ashay Aswale'
author_email = ''
description = Tests for robot state machine
url = https://github.com/NESTLab/2122_MultiDroneIndoorSLAM
project_urls =
    Bug Tracker = https://github.com/NESTLab/2122_MultiDroneIndoorSLAM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src