<package format="2">
  <name>multi_map_ros</name>
  <version>1.2.4</version>
  <description>
  This package provides multi map merging capability.
  </description>
  <maintainer email="phnikopoulos@wpi.edu">Peter</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
