[metadata]
name = mapmerge
version = 0.0.1
author = 'Connor Mclaughlin, Tyler Ferrara, Peter Nikopoulos'
author_email = 'cjmclaughlin@wpi.edu, tjferrara@wpi.edu, phnikopoulos@wpi.edu'
description = Toolkit for performing keypoint detection and occupancy grid merges.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NESTLab/2122_MultiDroneIndoorSLAM
project_urls =
    Bug Tracker = https://github.com/NESTLab/2122_MultiDroneIndoorSLAM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src